# Machine-Learning-Portfolio

ml_advanced/cnn_from_scratch/: README.md  cnn.py  model.py  pool.py  test_mnist.py
ml_fundamentals/: README.md
ml_fundamentals/basic_ml_libraries/1 Numpy/: 00_numpy_fundamentals.ipynb  01_numpy_advanced.ipynb  numpy_practice.ipynb
ml_fundamentals/basic_ml_libraries/2 Pandas/: 00_pandas_fundamentals.ipynb  01_pandas_advanced.ipynb  big_sample.csv  pandas_practice.ipynb  sample_people.csv
ml_fundamentals/basic_models/: decision_tree.ipynb  k_means_visualization.ipynb  knn.ipynb  linear_regression.ipynb  logistic_regression.ipynb  polynomial_regression.ipynb
ml_fundamentals/pytorch/: 00_pytorch_fundamentals.ipynb  01_pytorch_workflow.ipynb  02_pytorch_classification.ipynb  03_pytorch_computer_vision.ipynb  helper_functions.py  practice.ipynb
reinforcement_learning/graphopoly/: CLAUDE.md  README.md  main.py  package-lock.json  plan.md  requirements.txt
reinforcement_learning/inference_vs_action_pursuit/: README.md  analyze.py  experiments.txt  main.py  pyproject.toml  requirements.txt  train.py
reinforcement_learning/inference_vs_action_pursuit/.antigravitycli/: 2f2251e0-b7b4-40ef-b44a-d3fb76b8996b.json
reinforcement_learning/inference_vs_action_pursuit/analysis_output/: inference_density.csv  success_rates.csv
reinforcement_learning/inference_vs_action_pursuit/src/inference_pursuit/: __init__.py  belief_filter.py  env.py  geometry.py
reinforcement_learning/inference_vs_action_pursuit/tests/: test_belief_filter.py  test_env.py  test_geometry.py
(+91 files in other folders)
