[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inference-pursuit"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=0.29",
    "numpy>=1.26",
    "scipy>=1.12",
    "stable-baselines3>=2.3",
    "torch>=2.2",
    "matplotlib>=3.8",
    "pandas>=2.2",
]

[tool.setuptools.packages.find]
where = ["src"]
